@@ -23,36 +23,88 @@ if  { [gdb_compile "${srcdir}/${subdir}/${srcfile}" "${binfile}" executable {deb
      return -1
 }
 
+proc target_supports_scheduler_locking {} {
+    global gdb_prompt
+    global binfile
+
+    clean_restart ${binfile}
+
+    set supports_schedule_locking -1
+    set current_schedule_locking_mode ""
+
+    set test "reading current scheduler-locking mode"
+    gdb_test_multiple "show scheduler-locking" $test {
+	-re "Mode for locking scheduler during execution is \"(\[\^\"\]*)\".*$gdb_prompt" {
+	    set current_schedule_locking_mode $expect_out(1,string)
+	}
+	-re "$gdb_prompt $" {
+	    set supports_schedule_locking 0
+	}
+	timeout {
+	    set supports_schedule_locking 0
+	}
+    }
+
+    if { $supports_schedule_locking == -1 } {
+	set test "checking for scheduler-locking support"
+	gdb_test_multiple "set scheduler-locking $current_schedule_locking_mode" $test {
+	    -re "Target '\[^'\]+' cannot support this command\..*$gdb_prompt $" {
+		set supports_schedule_locking 0
+	    }
+	    -re "$gdb_prompt $" {
+		set supports_schedule_locking 1
+	    }
+	    timeout {
+		set supports_schedule_locking 0
+	    }
+	}
+    }
+
+    if { $supports_schedule_locking == -1 } {
+	verbose -log "Unable to tell whether we support scheduler-locking or not."
+	set supports_schedule_locking 0
+    }
+
+    gdb_exit
+    return $supports_schedule_locking
+}
+
+set scheduler_locking_supported [target_supports_scheduler_locking]
+
 proc test_command_param_changed { } {
+    global scheduler_locking_supported
+
     with_test_prefix "cmd param" {
 	if [mi_gdb_start] {
 	    return
 	}
 	mi_run_to_main
 
-	foreach opt { "on" "off" "step" } {
-	    mi_gdb_test "set scheduler-locking ${opt}" \
-		".*=cmd-param-changed,param=\"scheduler-locking\",value=\"${opt}\".*\\^done" \
-		"\"set scheduler-locking ${opt}\""
-	}
-	foreach opt { "on" "off" "step" } {
-	    mi_gdb_test "interpreter-exec console \"set scheduler-locking ${opt}\"" \
-		".*=cmd-param-changed,param=\"scheduler-locking\",value=\"${opt}\".*\\^done" \
-		"interpreter-exec \"set scheduler-locking ${opt}\""
-	}
-	# Don't emit MI notification for request from MI.
-	mi_gdb_test "-gdb-set scheduler-locking on" \
-	    {\^done} \
-	    "\"set scheduler-locking on\" no event (requested by MI)"
-	mi_gdb_test "-exec-arguments foo" {\^done} \
-	    "\"-exec-arguments foo\" no event"
+	if { $scheduler_locking_supported } {
+	    foreach opt { "on" "off" "step" } {
+		mi_gdb_test "set scheduler-locking ${opt}" \
+		    ".*=cmd-param-changed,param=\"scheduler-locking\",value=\"${opt}\".*\\^done" \
+		    "\"set scheduler-locking ${opt}\""
+	    }
+	    foreach opt { "on" "off" "step" } {
+		mi_gdb_test "interpreter-exec console \"set scheduler-locking ${opt}\"" \
+		    ".*=cmd-param-changed,param=\"scheduler-locking\",value=\"${opt}\".*\\^done" \
+		    "interpreter-exec \"set scheduler-locking ${opt}\""
+	    }
+	    # Don't emit MI notification for request from MI.
+	    mi_gdb_test "-gdb-set scheduler-locking on" \
+		{\^done} \
+		"\"set scheduler-locking on\" no event (requested by MI)"
+	    mi_gdb_test "-exec-arguments foo" {\^done} \
+		"\"-exec-arguments foo\" no event"
 
-	mi_gdb_test "interpreter-exec mi \"-gdb-set scheduler-locking step\"" \
+	    mi_gdb_test "interpreter-exec mi \"-gdb-set scheduler-locking step\"" \
 	    "\\&\"interpreter-exec mi .*\"-gdb-set scheduler-locking step.*\"\\\\n\"\r\n\\^done\r\n\\^done" \
-	    "\"set scheduler-locking step\" no event (requested by MI interp)"
-	mi_gdb_test "set scheduler-locking step" \
-	    "\\&\"set scheduler-locking step\\\\n\"\r\n\\^done" \
-	    "\"set scheduler-locking stepr\" no event"
+		"\"set scheduler-locking step\" no event (requested by MI interp)"
+	    mi_gdb_test "set scheduler-locking step" \
+		"\\&\"set scheduler-locking step\\\\n\"\r\n\\^done" \
+		"\"set scheduler-locking stepr\" no event"
+	}
 
 
 	foreach command { "remotecache" "check type" } {
